# ppt_agentic_workflow

./: .env.example  .gitignore  AGENTS.md  PPT_GENERATION_SKILL.md  README.md  pyproject.toml
docs/: agent_harness_positioning.md  architecture_overview.md  artifact_walkthrough.md  benchmark_guide.md  demo_runbook.md  harness_engineering_overview.md  interview_playbook.md  limitations_and_next_steps.md  module_map.md  refactor_guardrails.md  resume_alignment.md  run_full_flow_locally.md
ppt_agent_harness_latest_docs/: 00_POSITIONING.md  01_QUALITY_HARNESS.md
ppt_backend/: __init__.py  cli.py  runtime_bridge.py  server.py
runtime/: api.py  config.py  package-lock.json  package.json
runtime/backend/: __init__.py
runtime/backend/harness/: __init__.py
runtime/backend/models/: schemas.py
runtime/backend/tools/: openai_compat.py  pptx_skill.py  search_backend.py  usage_recorder.py
scripts/: run_full_harness_flow.py
skill_scripts/: runtime.py
slide_revise_agent_plan/: 00_README_计划总览.md  01_目标会议_IUI2027_与研究定位.md  02_研究问题_创新点_贡献表述.md  03_仓库改造与系统架构.md  04_Revision_Index_核心方法设计.md  05_Codex_分阶段实现计划.md  06_SlideReviseBench_ZH_数据集计划.md  07_实验设计与消融计划.md  08_IUI2027_论文写作计划.md  09_给老师汇报用_精简版.md  10_阶段审阅Checklist.md  11_Codex_Master_Prompt.md  12_风险控制与最小可发表版本.md
tests/: test_agent_runtime.py  test_benchmark_harness.py  test_documentation_alignment.py  test_full_flow_demo_runner.py  test_memory_harness.py  test_observability_harness.py  test_orchestration_harness.py  test_quality_harness.py  test_repair_harness.py  test_runtime_integration.py  test_tool_runtime.py
(+254 files in other folders)
