[project]
name = "ppt-generation-backend"
version = "0.1.0"
description = "Standalone backend-only PPT generation runtime extracted from DirectionAICloud."
requires-python = ">=3.12"
dependencies = [
    "defusedxml>=0.7.1",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "lxml>=5.0.0",
    "markitdown[pptx]>=0.1.2",
    "openai>=1.50.0",
    "pdfplumber>=0.10.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pypdf>=5.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.0",
    "tavily-python>=0.7.0",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
ppt-backend = "ppt_backend.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["ppt_backend"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]
